--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "name": "project-gulp",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "start": "gulp",
+    "build": "gulp --production"
+  },
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.23.3",
+    "@babel/preset-env": "^7.23.3",
+    "babel-loader": "^9.1.3",
     "browser-sync": "^2.29.3",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
@@ -19,6 +25,9 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.2.2",
+    "webpack-stream": "^7.0.0"
   }
 }
