--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "type": "module",
-  "name": "project-gulp",
+  "name": "dmz-gulp",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -19,15 +19,16 @@
     "gulp-clean-css": "^4.3.0",
     "gulp-format-html": "^2.3.0",
     "gulp-if": "^3.0.0",
+    "gulp-imagemin": "^9.0.0",
+    "gulp-newer": "^1.4.0",
     "gulp-notify": "^4.0.0",
     "gulp-plumber": "^1.2.1",
     "gulp-pug": "^5.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
+    "gulp-webp": "^5.0.0",
     "sass": "^1.69.5",
-    "ts-loader": "^9.5.1",
-    "typescript": "^5.2.2",
     "webpack-stream": "^7.0.0"
   }
 }
